force-app/main/default/objects/Yearly_CChEN_declaration__c/Yearly_CChEN_declaration__c.object-meta.xml
<CustomObject>
    <label>Yearly CChEN declaration</label>
    <nameField>
        <displayFormat>CCHEN-{0000}</displayFormat>
        <label>CChEN Correlative</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yearly CChEN declarations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>