force-app/main/default/objects/Yearly_CChEN_declaration__c/fields/Is_it_valid__c.field-meta.xml
<CustomField>
    <fullName>Is_it_valid__c</fullName>
    <formula>Date__c &gt;= Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is it valid?</label>
    <type>Checkbox</type>
</CustomField>