force-app/main/default/objects/Yearly_CChEN_declaration__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Requires renovation</fullName>
                <isActive>false</isActive>
                <label>Requires renovation</label>
            </value>
            <value>
                <fullName>Valid</fullName>
                <isActive>false</isActive>
                <label>Valid</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>