force-app/main/default/objects/Yearly_CChEN_declaration__c/validationRules/CChEN_Approve.validationRule-meta.xml
<ValidationRule>
    <fullName>CChEN_Approve</fullName>
    <active>true</active>
    <description>Regla que impide la aprobación manual del registro sin pasar previamente por el procesos de aprobación definido.</description>
    <errorConditionFormula>CChEN_Approve__c = FALSE &amp;&amp;  
ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(Status__c, &quot;Approved&quot;)</errorConditionFormula>
    <errorMessage>Please submit the CChEN declaration for approval</errorMessage>
</ValidationRule>